css updates to align text correctly

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,8 +5,8 @@ html {
 body {
   background-color: rgb(43, 43, 43);
   color: white;
-  text-align: center;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
 }
 
 header {
@@ -44,12 +44,21 @@ h1 {
   margin-bottom: 50px;
 }
 
+h2 {
+  text-align: center;
+}
+
 #profile-image {
   max-width: 20%;
   height: auto;
   border-radius: 10px;
   border: hsl(202, 85%, 61%);
   border-style: ridge;
+  margin: 0 auto;
+}
+
+#about-me {
+  text-align: left;
 }
 
 #about-me,
@@ -68,10 +77,14 @@ h1 {
   display: inline-block;
 }
 
+#showpiece {
+  margin: 0 auto;
+  text-align: center;
+}
+
 #thumbnails {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   justify-content: space-around;
 }
 
